syntax = "proto3";

import "google/protobuf/any.proto";
import "core/Discover.proto";

package protocol;


option java_package = "org.unichain.protos"; //Specify the name of the package that generated the Java file
option java_outer_classname = "Protocol"; //Specify the class name of the generated Java file
option go_package = "github.com/unichainprotocol/grpc-gateway/core";

message AddressMessage {
  bytes address = 1;
}

message BoolMessage {
  bool value = 1;
}

enum AccountType {
  Normal = 0;
  AssetIssue = 1;
  Contract = 2;
  System = 3;
}

// AccountId, (name, address) use name, (null, address) use address, (name, null) use name,
message AccountId {
  bytes name = 1;
  bytes address = 2;
}

// vote message
message Vote {
  // the super rep address
  bytes vote_address = 1;
  // the vote num to this super rep.
  int64 vote_count = 2;
}

// Proposal
message Proposal {
  int64 proposal_id = 1;
  bytes proposer_address = 2;
  map<int64, int64> parameters = 3;
  int64 expiration_time = 4;
  int64 create_time = 5;
  repeated bytes approvals = 6;
  enum State {
    PENDING = 0;
    DISAPPROVED = 1;
    APPROVED = 2;
    CANCELED = 3;
  }
  State state = 7;
}

// Exchange
message Exchange {
  int64 exchange_id = 1;
  bytes creator_address = 2;
  int64 create_time = 3;
  bytes first_token_id = 6;
  int64 first_token_balance = 7;
  bytes second_token_id = 8;
  int64 second_token_balance = 9;
}

message ChainParameters {
  repeated ChainParameter chainParameter = 1;
  message ChainParameter {
    string key = 1;
    int64 value = 2;
  }
}

message FutureTokenPack {
  string token_name = 1;
  bytes  owner_address = 2;
  int64  total_deal = 3;
  int64 lower_bound_time = 4;
  int64 upper_bound_time = 5;
  int64 total_value = 6;
  repeated FutureTokenV2 deals = 7;
}

message TokenPoolQuery {
  string token_name = 1;
  int32  page_size = 2;
  int32 page_index = 3;
  string token_addr = 4;
}

message FutureTokenQuery {
  string token_name = 1;
  bytes  owner_address = 2;
  int32  page_size = 3;
  int32 page_index = 4;
}

message FutureTokenSummaryV2 {
  string token_name = 1;
  int64  total_deal = 3;
  int64 lower_bound_time = 4;
  int64 upper_bound_time = 5;
  int64 total_value = 6;
  bytes lower_tick = 7;
  bytes upper_tick = 8;
}

message FutureTokenV2 {
  int64 future_balance = 1;
  int64 expire_time = 2;
  bytes prev_tick = 3;
  bytes next_tick = 4;
}

message FutureQuery {
  bytes  owner_address = 1;
  int32  page_size = 2;
  int32 page_index = 3;
}

message Future {
  int64 future_balance = 1;
  int64 expire_time = 2;
  bytes prev_tick = 3;
  bytes next_tick = 4;
}

message FutureSummary {
  int64 total_deal = 1;
  int64 lower_time = 2;
  int64 upper_time = 3;
  int64 total_balance = 4;
  bytes lower_tick = 5;
  bytes upper_tick = 6;
}

message FuturePack {
  bytes  owner_address = 1;
  int64  total_deal = 2;
  int64 lower_time = 3;
  int64 upper_time = 4;
  int64 total_balance = 5;
  repeated Future deals = 6;
}

/**
  urc20
 */
message Urc20FutureTokenPack {
  bytes  owner_address = 1;
  bytes address = 2;
  string symbol = 3;
  int64  total_deal = 4;
  int64 lower_bound_time = 5;
  int64 upper_bound_time = 6;
  string total_value = 7; //decimal str
  repeated Urc20FutureToken deals = 8;
}

message Urc20ContractQuery {
  bytes address = 1;
  string symbol = 2;
  int32  page_size = 3;
  int32 page_index = 4;
}

message Urc20FutureTokenQuery {
  bytes owner_address = 3;
  bytes address = 1;
  int32 page_size = 4;
  int32 page_index = 5;
}

message Urc20BalanceOfQuery {
  bytes owner_address = 1;
  bytes address = 2;
}

message Urc20AllowanceQuery {
  bytes owner = 1;
  bytes address = 2;
  bytes spender = 3;
}

message Urc20FutureTokenSummary {
  bytes address = 1;
  string symbol = 2;
  int64  total_deal = 3;
  int64 lower_bound_time = 4;
  int64 upper_bound_time = 5;
  string total_value = 6;
  bytes lower_tick = 7;
  bytes upper_tick = 8;
}

message Urc20FutureToken {
  string future_balance = 1; //decimal str
  int64 expire_time = 2;
  bytes prev_tick = 3;
  bytes next_tick = 4;
}

message Urc20SpenderQuota{
    bytes owner = 1;
    string limit = 2; //decimal str
    string spent = 3; //decimal str
    string avail = 4; //decimal str
}
message Urc20Spender {
  bytes spender = 1;
  bytes contract = 2;
  map<string, Urc20SpenderQuota> quotas = 3; //owner --> spend quota
}

/**
  used for both token urc20 & nft indexing
 */
message TokenAddressSymbolIndex{
  string  symbol = 1;
}

message TokenSymbolAddressIndex{
  bytes address = 1;
}

/* Account */
message Account {
  /* frozen balance */
  message Frozen {
    int64 frozen_balance = 1; // the frozen unx balance
    int64 expire_time = 2; // the expire time
  }

  // account nick name
  bytes account_name = 1;
  AccountType type = 2;
  // the create address
  bytes address = 3;
  // the unx balance
  int64 balance = 4;
  // the votes
  repeated Vote votes = 5;
  // the other asset owned by this account
  map<string, int64> asset = 6;

  // the other asset owned by this accountï¼Œkey is assetId
  map<string, int64> assetV2 = 56;

  //token map, including all type
  map<string, int64> token = 60;

  //token future
  map<string, FutureTokenSummaryV2> token_future = 61;

  //token map" [addr --> decimal number]
  map<string, string> urc20 = 62;

  //token future
  map<string, Urc20FutureTokenSummary> urc20_future = 63;

  // the frozen balance for bandwidth
  repeated Frozen frozen = 7;
  // bandwidth, get from frozen
  int64 net_usage = 8;
  //Frozen balance provided by other accounts to this account
  int64 acquired_delegated_frozen_balance_for_bandwidth = 41;
  //Freeze and provide balances to other accounts
  int64 delegated_frozen_balance_for_bandwidth = 42;

  // this account create time
  int64 create_time = 0x09;
  // this last operation time, including transfer, voting and so on
  int64 latest_opration_time = 10;
  // witness block producing allowance
  int64 allowance = 0x0B;
  // last withdraw time
  int64 latest_withdraw_time = 0x0C;
  // not used so far
  bytes code = 13;
  bool is_witness = 14;
  bool is_committee = 15;
  // frozen asset(for asset issuer)
  repeated Frozen frozen_supply = 16;
  // asset_issued_name
  bytes asset_issued_name = 17;
  bytes asset_issued_ID = 57;
  map<string, int64> latest_asset_operation_time = 18;
  map<string, int64> latest_asset_operation_timeV2 = 58;
  int64 free_net_usage = 19;
  map<string, int64> free_asset_net_usage = 20;
  map<string, int64> free_asset_net_usageV2 = 59;
  int64 latest_consume_time = 21;
  int64 latest_consume_free_time = 22;

  // the identity of this account, case insensitive
  bytes account_id = 23;

  message AccountResource {
    // energy resource, get from frozen
    int64 energy_usage = 1;
    // the frozen balance for energy
    Frozen frozen_balance_for_energy = 2;
    int64 latest_consume_time_for_energy = 3;

    //Frozen balance provided by other accounts to this account
    int64 acquired_delegated_frozen_balance_for_energy = 4;
    //Frozen balances provided to other accounts
    int64 delegated_frozen_balance_for_energy = 5;

    // storage resource, get from market
    int64 storage_limit = 6;
    int64 storage_usage = 7;
    int64 latest_exchange_storage_time = 8;
  }

  AccountResource account_resource = 26;
  bytes codeHash = 30;
  Permission owner_permission = 31;
  Permission witness_permission = 32;
  repeated Permission active_permission = 33;

  //future transfer balance
  FutureSummary future_supply = 34;
}


message Key {
  bytes address = 1;
  int64 weight = 2;
}

message DelegatedResource {
  bytes from = 1;
  bytes to = 2;
  int64 frozen_balance_for_bandwidth = 3;
  int64 frozen_balance_for_energy = 4;
  int64 expire_time_for_bandwidth = 5;
  int64 expire_time_for_energy = 6;
}

message authority {
  AccountId account = 1;
  bytes permission_name = 2;
}

message Permission {
  enum PermissionType {
    Owner = 0;
    Witness = 1;
    Active = 2;
  }
  PermissionType type = 1;
  int32 id = 2; //Owner id=0, Witness id=1, Active id start by 2
  string permission_name = 3;
  int64 threshold = 4;
  int32 parent_id = 5;
  bytes operations = 6; //1 bit 1 contract
  repeated Key keys = 7;
}

// Witness
message Witness {
  bytes address = 1;
  int64 voteCount = 2;
  bytes pubKey = 3;
  string url = 4;
  int64 totalProduced = 5;
  int64 totalMissed = 6;
  int64 latestBlockNum = 7;
  int64 latestSlotNum = 8;
  bool isJobs = 9;
}

// Vote Change
message Votes {
  bytes address = 1;
  repeated Vote old_votes = 2;
  repeated Vote new_votes = 3;
}

// Transcation

message TXOutput {
  int64 value = 1;
  bytes pubKeyHash = 2;
}

message TXInput {
  message raw {
    bytes txID = 1;
    int64 vout = 2;
    bytes pubKey = 3;
  }
  raw raw_data = 1;
  bytes signature = 4;
}

message TXOutputs {
  repeated TXOutput outputs = 1;
}

message ResourceReceipt {
  int64 energy_usage = 1;
  int64 energy_fee = 2;
  int64 origin_energy_usage = 3;
  int64 energy_usage_total = 4;
  int64 net_usage = 5;
  int64 net_fee = 6;
  Transaction.Result.contractResult result = 7;
}

message Transaction {
  message Contract {
    enum ContractType {
      AccountCreateContract = 0;
      TransferContract = 1;
      TransferAssetContract = 2;
      VoteAssetContract = 3;
      VoteWitnessContract = 4;
      WitnessCreateContract = 5;
      AssetIssueContract = 6;
      WitnessUpdateContract = 8;
      ParticipateAssetIssueContract = 9;
      AccountUpdateContract = 10;
      FreezeBalanceContract = 11;
      UnfreezeBalanceContract = 12;
      WithdrawBalanceContract = 13;
      UnfreezeAssetContract = 14;
      UpdateAssetContract = 15;
      ProposalCreateContract = 16;
      ProposalApproveContract = 17;
      ProposalDeleteContract = 18;
      SetAccountIdContract = 19;
      CustomContract = 20;
      // BuyStorageContract = 21;
      // BuyStorageBytesContract = 22;
      // SellStorageContract = 23;
      CreateSmartContract = 30;
      TriggerSmartContract = 31;
      GetContract = 32;
      UpdateSettingContract = 33;
      ExchangeCreateContract = 41;
      ExchangeInjectContract = 42;
      ExchangeWithdrawContract = 43;
      ExchangeTransactionContract = 44;
      UpdateEnergyLimitContract = 45;
      AccountPermissionUpdateContract = 46;
      ClearABIContract = 48;
      UpdateBrokerageContract = 49;

      FutureTransferContract = 50;
      FutureWithdrawContract = 52;

      //urc30 token
      CreateTokenContract = 53;
      ContributeTokenPoolFeeContract = 54;
      UpdateTokenParamsContract = 55;
      MineTokenContract = 57;
      BurnTokenContract = 58;
      TransferTokenContract = 59;
      WithdrawFutureTokenContract = 60;
      TransferTokenOwnerContract = 61;
      ExchangeTokenContract = 62;

      //urc721
      Urc721CreateContract = 63;
      Urc721MintContract = 64;
      Urc721RemoveMinterContract = 65;
      Urc721AddMinterContract = 66;
      Urc721RenounceMinterContract = 67;
      Urc721BurnContract = 68;
      Urc721ApproveContract = 69;
      Urc721SetApprovalForAllContract = 70;
      Urc721TransferFromContract = 71;

      //PosBridge
      PosBridgeSetupContract = 90;
      PosBridgeMapTokenContract = 91;
      PosBridgeCleanMapTokenContract =92;
      PosBridgeDepositContract = 93;
      PosBridgeDepositExecContract = 94;
      PosBridgeWithdrawContract =95;
      PosBridgeWithdrawExecContract = 96;

      //token urc20
      Urc20CreateContract = 110;
      Urc20ContributePoolFeeContract = 111;
      Urc20UpdateParamsContract = 112;
      Urc20MintContract = 113;
      Urc20BurnContract = 114;
      Urc20TransferFromContract = 115;
      Urc20WithdrawFutureContract = 116;
      Urc20TransferOwnerContract = 117;
      Urc20ExchangeContract = 118;
      Urc20ApproveContract = 119;
      Urc20TransferContract = 120;

      FutureDealTransferContract = 121;
    }

    ContractType type = 1;
    google.protobuf.Any parameter = 2;
    bytes provider = 3;
    bytes ContractName = 4;
    int32 Permission_id = 5;
  }

  message Result {
    enum code {
      SUCESS = 0;
      FAILED = 1;
    }
    enum contractResult {
      DEFAULT = 0;
      SUCCESS = 1;
      REVERT = 2;
      BAD_JUMP_DESTINATION = 3;
      OUT_OF_MEMORY = 4;
      PRECOMPILED_CONTRACT = 5;
      STACK_TOO_SMALL = 6;
      STACK_TOO_LARGE = 7;
      ILLEGAL_OPERATION = 8;
      STACK_OVERFLOW = 9;
      OUT_OF_ENERGY = 10;
      OUT_OF_TIME = 11;
      JVM_STACK_OVER_FLOW = 12;
      UNKNOWN = 13;
      TRANSFER_FAILED = 14;
    }
    int64 fee = 1;
    code ret = 2;
    contractResult contractRet = 3;

    string assetIssueID = 14;
    int64 withdraw_amount = 15;
    int64 unfreeze_amount = 16;
    int64 exchange_received_amount = 18;
    int64 exchange_inject_another_amount = 19;
    int64 exchange_withdraw_another_amount = 20;
    int64 exchange_id = 21;
  }

  message raw {
    bytes ref_block_bytes = 1;
    int64 ref_block_num = 3;
    bytes ref_block_hash = 4;
    int64 expiration = 8;
    repeated authority auths = 9;
    // data not used
    bytes data = 10;
    //only support size = 1,  repeated list here for extension
    repeated Contract contract = 11;
    // scripts not used
    bytes scripts = 12;
    int64 timestamp = 14;
    int64 fee_limit = 18;
  }

  raw raw_data = 1;
  // only support size = 1,  repeated list here for muti-sig extension
  repeated bytes signature = 2;
  repeated Result ret = 5;
}

message TransactionInfo {
  enum code {
    SUCESS = 0;
    FAILED = 1;
  }
  message Log {
    bytes address = 1;
    repeated bytes topics = 2;
    bytes data = 3;
  }
  bytes id = 1;
  int64 fee = 2;
  int64 blockNumber = 3;
  int64 blockTimeStamp = 4;
  repeated bytes contractResult = 5;
  bytes contract_address = 6;
  ResourceReceipt receipt = 7;
  repeated Log log = 8;
  code result = 9;
  bytes resMessage = 10;

  string assetIssueID = 14;
  int64 withdraw_amount = 15;
  int64 unfreeze_amount = 16;
  repeated InternalTransaction internal_transactions = 17;
  int64 exchange_received_amount = 18;
  int64 exchange_inject_another_amount = 19;
  int64 exchange_withdraw_another_amount = 20;
  int64 exchange_id = 21;
}

message TransactionRet {
  int64 blockNumber = 1;
  int64 blockTimeStamp = 2;
  repeated TransactionInfo transactioninfo = 3;
}

message Transactions {
  repeated Transaction transactions = 1;
}

message TransactionSign {
  Transaction transaction = 1;
  bytes privateKey = 2;
}

message BlockHeader {
  message raw {
    int64 timestamp = 1;
    bytes txTrieRoot = 2;
    bytes parentHash = 3;
    //bytes nonce = 5;
    //bytes difficulty = 6;
    int64 number = 7;
    int64 witness_id = 8;
    bytes witness_address = 9;
    int32 version = 10;
    bytes accountStateRoot = 11;
  }
  raw raw_data = 1;
  bytes witness_signature = 2;
}

// block
message Block {
  repeated Transaction transactions = 1;
  BlockHeader block_header = 2;
}

message ChainInventory {
  message BlockId {
    bytes hash = 1;
    int64 number = 2;
  }
  repeated BlockId ids = 1;
  int64 remain_num = 2;
}

// Inventory
message BlockInventory {
  enum Type {
    SYNC = 0;
    ADVTISE = 1;
    FETCH = 2;
  }

  message BlockId {
    bytes hash = 1;
    int64 number = 2;
  }
  repeated BlockId ids = 1;
  Type type = 2;
}

message Inventory {
  enum InventoryType {
    UNW = 0;
    BLOCK = 1;
  }
  InventoryType type = 1;
  repeated bytes ids = 2;
}

message Items {
  enum ItemType {
    ERR = 0;
    UNW = 1;
    BLOCK = 2;
    BLOCKHEADER = 3;
  }

  ItemType type = 1;
  repeated Block blocks = 2;
  repeated BlockHeader block_headers = 3;
  repeated Transaction transactions = 4;
}

// DynamicProperties
message DynamicProperties {
  int64 last_solidity_block_num = 1;
}

enum ReasonCode {
  REQUESTED = 0x00;
  BAD_PROTOCOL = 0x02;
  TOO_MANY_PEERS = 0x04;
  DUPLICATE_PEER = 0x05;
  INCOMPATIBLE_PROTOCOL = 0x06;
  NULL_IDENTITY = 0x07;
  PEER_QUITING = 0x08;
  UNEXPECTED_IDENTITY = 0x09;
  LOCAL_IDENTITY = 0x0A;
  PING_TIMEOUT = 0x0B;
  USER_REASON = 0x10;
  RESET = 0x11;
  SYNC_FAIL = 0x12;
  FETCH_FAIL = 0x13;
  BAD_TX = 0x14;
  BAD_BLOCK = 0x15;
  FORKED = 0x16;
  UNLINKABLE = 0x17;
  INCOMPATIBLE_VERSION = 0x18;
  INCOMPATIBLE_CHAIN = 0x19;
  TIME_OUT = 0x20;
  CONNECT_FAIL = 0x21;
  TOO_MANY_PEERS_WITH_SAME_IP = 0x22;
  UNKNOWN = 0xFF;
}

message DisconnectMessage {
  ReasonCode reason = 1;
}

message HelloMessage {
  message BlockId {
    bytes hash = 1;
    int64 number = 2;
  }

  Endpoint from = 1;
  int32 version = 2;
  int64 timestamp = 3;
  BlockId genesisBlockId = 4;
  BlockId solidBlockId = 5;
  BlockId headBlockId = 6;
}

message SmartContract {
  message ABI {
    message Entry {
      enum EntryType {
        UnknownEntryType = 0;
        Constructor = 1;
        Function = 2;
        Event = 3;
        Fallback = 4;
      }
      message Param {
        bool indexed = 1;
        string name = 2;
        string type = 3;
        // SolidityType type = 3;
      }
      enum StateMutabilityType {
        UnknownMutabilityType = 0;
        Pure = 1;
        View = 2;
        Nonpayable = 3;
        Payable = 4;
      }

      bool anonymous = 1;
      bool constant = 2;
      string name = 3;
      repeated Param inputs = 4;
      repeated Param outputs = 5;
      EntryType type = 6;
      bool payable = 7;
      StateMutabilityType stateMutability = 8;
    }
    repeated Entry entrys = 1;
  }
  bytes origin_address = 1;
  bytes contract_address = 2;
  ABI abi = 3;
  bytes bytecode = 4;
  int64 call_value = 5;
  int64 consume_user_resource_percent = 6;
  string name = 7;
  int64 origin_energy_limit = 8;
  bytes code_hash = 9;
  bytes unx_hash = 10;
}

message InternalTransaction {
  // internalTransaction identity, the root InternalTransaction hash
  // should equals to root transaction id.
  bytes hash = 1;
  // the one send unx (TBD: or token) via function
  bytes caller_address = 2;
  // the one recieve unx (TBD: or token) via function
  bytes transferTo_address = 3;
  message CallValueInfo {
    // unx (TBD: or token) value
    int64 callValue = 1;
    // TBD: tokenName, unx should be empty
    string tokenId = 2;
  }
  repeated CallValueInfo callValueInfo = 4;
  bytes note = 5;
  bool rejected = 6;
}

message DelegatedResourceAccountIndex {
  bytes account = 1;
  repeated bytes fromAccounts = 2;
  repeated bytes toAccounts = 3;
}

message NodeInfo {
  int64 beginSyncNum = 1;
  string block = 2;
  string solidityBlock = 3;
  //connect information
  int32 currentConnectCount = 4;
  int32 activeConnectCount = 5;
  int32 passiveConnectCount = 6;
  int64 totalFlow = 7;
  repeated PeerInfo peerInfoList = 8;
  ConfigNodeInfo configNodeInfo = 9;
  MachineInfo machineInfo = 10;
  map<string, string> cheatWitnessInfoMap = 11;

  message PeerInfo {
    string lastSyncBlock = 1;
    int64 remainNum = 2;
    int64 lastBlockUpdateTime = 3;
    bool syncFlag = 4;
    int64 headBlockTimeWeBothHave = 5;
    bool needSyncFromPeer = 6;
    bool needSyncFromUs = 7;
    string host = 8;
    int32 port = 9;
    string nodeId = 10;
    int64 connectTime = 11;
    double avgLatency = 12;
    int32 syncToFetchSize = 13;
    int64 syncToFetchSizePeekNum = 14;
    int32 syncBlockRequestedSize = 15;
    int64 unFetchSynNum = 16;
    int32 blockInPorcSize = 17;
    string headBlockWeBothHave = 18;
    bool isActive = 19;
    int32 score = 20;
    int32 nodeCount = 21;
    int64 inFlow = 22;
    int32 disconnectTimes = 23;
    string localDisconnectReason = 24;
    string remoteDisconnectReason = 25;
  }

  message ConfigNodeInfo {
    string codeVersion = 1;
    string p2pVersion = 2;
    int32 listenPort = 3;
    bool discoverEnable = 4;
    int32 activeNodeSize = 5;
    int32 passiveNodeSize = 6;
    int32 sendNodeSize = 7;
    int32 maxConnectCount = 8;
    int32 sameIpMaxConnectCount = 9;
    int32 backupListenPort = 10;
    int32 backupMemberSize = 11;
    int32 backupPriority = 12;
    int32 dbVersion = 13;
    int32 minParticipationRate = 14;
    bool supportConstant = 15;
    double minTimeRatio = 16;
    double maxTimeRatio = 17;
    int64 allowCreationOfContracts = 18;
    int64 allowAdaptiveEnergy = 19;
  }

  message MachineInfo {
    int32 threadCount = 1;
    int32 deadLockThreadCount = 2;
    int32 cpuCount = 3;
    int64 totalMemory = 4;
    int64 freeMemory = 5;
    double cpuRate = 6;
    string javaVersion = 7;
    string osName = 8;
    int64 jvmTotalMemoery = 9;
    int64 jvmFreeMemory = 10;
    double processCpuRate = 11;
    repeated MemoryDescInfo memoryDescInfoList = 12;
    repeated DeadLockThreadInfo deadLockThreadInfoList = 13;

    message MemoryDescInfo {
      string name = 1;
      int64 initSize = 2;
      int64 useSize = 3;
      int64 maxSize = 4;
      double useRate = 5;
    }

    message DeadLockThreadInfo {
      string name = 1;
      string lockName = 2;
      string lockOwner = 3;
      string state = 4;
      int64 blockTime = 5;
      int64 waitTime = 6;
      string stackTrace = 7;
    }
  }
}

/**
  Urc721
 */
message Urc721Contract{
  string symbol = 1;
  string name = 2;
  int64 total_supply = 3;
  int64 token_index = 4;
  bytes minter = 5;
  bytes owner = 6;
  int64 last_operation = 7;
  bytes next = 8;
  bytes prev = 9;
  bytes next_of_minter = 10;
  bytes prev_of_minter = 11;
  bytes address = 12;
}

message Urc721Token{
  string symbol = 1;
  int64 id = 2;
  bytes owner_address = 3;
  bytes approval = 4;
  string uri = 5;
  int64 last_operation = 6;
  bytes next = 7;
  bytes prev = 8;
  bytes address = 9;
}
message Urc721ApproveAllMap {
   map<string, bool> contracts = 1; //[contract base58 --> bool]
}

message Urc721AccountTokenRelation{
  bytes owner_address = 1;
  //for owner
  bytes head = 2;
  bytes tail = 3;
  int64 total = 4;
  map<string, int64> totals = 5; //owner --> [contract addr --> total], base58

  //for approval
  bytes approve_head = 7;
  bytes approve_tail = 8;
  int64 approve_total = 9;

  //for approval for all
  map<string, string> approved_for_alls = 10; //owner --> [contract addr --> operator], base58
  map<string, Urc721ApproveAllMap> approve_alls = 6; //operator --> [owner --> contract addr map], base58
}

message Urc721AccountContractRelation{
  bytes owner_address = 1;
  bytes head = 2;
  bytes tail = 3;
  int64 total = 4;
}

message Urc721ContractQuery{
  bytes owner_address = 1;
  int32 page_size = 2;
  int32 page_index = 3;
  string owner_type = 4; //owner|minter
}

message Urc721ContractPage{
  bytes owner_address = 1;
  int32 page_size = 2;
  int32 page_index = 3;
  int64 total = 4;
  repeated Urc721Contract contracts = 5;
}

message Urc721TokenListQuery{
  bytes owner_address = 1;
  bytes address = 2;
  int32 page_size = 3;
  int32 page_index = 4;
  string owner_type = 5; //owner|approved|approved_all
}

message Urc721TokenPage{
  bytes owner_address = 1;
  int32 page_size = 2;
  int32 page_index = 3;
  int64 total = 4;
  repeated Urc721Token tokens = 5;
}

message Urc721TokenQuery{
  bytes address = 1;
  int64 id = 2;
}

message Urc721ApprovedForAllQuery{
  bytes owner_address = 1;
  bytes address = 2;
}

message Urc721BalanceOfQuery{
  bytes owner_address = 1;
  bytes address = 2;
}

message Urc721IsApprovedForAllQuery{
  bytes owner_address = 1;
  bytes address = 3;
  bytes operator = 2;
}

message Urc721TokenApproveRelation{
  bytes owner_address = 1;
  bytes token_id = 2;
  bytes next = 3;
  bytes prev = 4;
}

message PosBridgeConfig{
  bytes owner_address = 1;
  int64 min_validator = 2;
  uint32 consensus_rate =3;
  map<string, string> validators = 4;
  bool initialized = 5;
  PosBridgePredicate predicates = 6;
}

message PosBridgePredicate{
  bytes predicate_native = 1;
  bytes predicate_erc20 = 2;
  bytes predicate_erc721 = 3;
}

message PostBridgeRootTokenMap{
  int64 childChainId = 1;
  string childToken = 2;
  string rootToken = 3;
  int32 tokenType = 4;
}

message PostBridgeChildTokenMap{
  int64 rootChainId = 1;
  string rootToken = 2;
  string childToken = 3;
  int32 tokenType = 4;
}


message PosBridgeTokenMappingPage {
  int64  page_size = 1;
  int64 page_index = 2;
  int64 total = 3;
  repeated PostBridgeRootTokenMap root_token_maps = 4;
  repeated PostBridgeChildTokenMap child_token_maps = 5;
}